crates/ir/tests/snapshots/lower_test__traits__op_comparison_inferred.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module traits__op_comparison_inferred

import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[s8]): List[s8]
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
import core/io/println as println(s): Unit
declare println: (s) -> Unit

fn is_equal(v0: Dict[core/eq.Eq, e9], v1: e9, v2: e9) -> Bool =
  let v3: Bool = trait_call core/eq.Eq.eq(v0, v1, v2)
  v3

fn main() -> Unit =
  let v5: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
  let v6: Bool = call is_equal(v5, 1, 1)
  let v7: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
  let v8: String = trait_call core/show.Show.show(v7, v6)
  let v4: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v9: Unit = call println(v4, v8)
  v9
