crates/ir/tests/snapshots/lower_test__traits__op_neg_inferred.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module traits__op_neg_inferred

import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
import core/io/println as println(h) -> Unit
declare println: (h) -> Unit

fn negate(v0: Dict[core/neg.Neg, l8], v1: l8) -> l8 =
  let v2: l8 = trait_call core/neg.Neg.neg(v0, v1)
  v2

fn main() -> Unit =
  let v4: Dict[core/neg.Neg, Int] = get_dict core/neg.Neg[Int]
  let v5: Int = call negate(v4, 5)
  let v6: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v7: String = trait_call core/show.Show.show(v6, v5)
  let v3: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v8: Unit = call println(v3, v7)
  v8
