crates/ir/tests/snapshots/lower_test__traits__op_ord_user_type.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module traits__op_ord_user_type

struct Wrapper { val: Int }
instance core/eq.Eq[Wrapper] { eq=Eq$$Wrapper$$eq }
instance core/ord.Ord[Wrapper] { lt=Ord$$Wrapper$$lt }
import core/peek/peek as peek(h) -> h
import core/list/last as last(List[u3]) -> Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5) -> List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool) -> List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1) -> y1
import core/list/map as map(List[y], (y) -> a1) -> List[a1]
import core/vec/to_list as to_list(Vec[c8]) -> List[c8]
import core/io/println as println(k) -> Unit
import core/option/Some as Some(e) -> Option[e]
import core/result/Ok as Ok(g) -> Result[f, g]
import core/result/Err as Err(f) -> Result[f, g]
import core/list/Cons as Cons(h, List[h]) -> List[h]
declare println: (k) -> Unit

fn main() -> Unit =
  let v1: ~Wrapper = construct Wrapper(1)
  let v2: ~Wrapper = construct Wrapper(2)
  let v3: Dict[core/ord.Ord, Wrapper] = get_dict core/ord.Ord[Wrapper]
  let v4: Bool = trait_call core/ord.Ord.lt(v3, v1, v2)
  let v0: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
  let v5: Unit = call println(v0, v4)
  v5

fn Eq$$Wrapper$$eq(v6: Wrapper, v7: Wrapper) -> Bool =
  let v8: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
  let v9: Int = project v6.0
  let v10: Int = project v7.0
  let v11: Bool = trait_call core/eq.Eq.eq(v8, v9, v10)
  v11

fn Ord$$Wrapper$$lt(v12: Wrapper, v13: Wrapper) -> Bool =
  let v14: Dict[core/ord.Ord, Int] = get_dict core/ord.Ord[Int]
  let v15: Int = project v12.0
  let v16: Int = project v13.0
  let v17: Bool = trait_call core/ord.Ord.lt(v14, v15, v16)
  v17
